Name:               HK
Version:            0.1.0
Description:        Implementation of the Kanren programming language in
                    Haskell, utilizing monadic computations to control
                    backtracking with fair disjunction.
Synopsis:           Implementation of the Kanren logic system.
License:            BSD3
License-file:       LICENSE
Author:             Carlo Angiuli, Adam Foltzer, and Jaimie Murdock
Maintainer:         Jaimie Murdock
Homepage:           https://github.com/JaimieMurdock/HK
Bug-reports:        https://github.com/JaimieMurdock/HK/issues
Stability:          Experimental
Tested-With:        GHC
Build-Type:         Simple
Cabal-version:      >=1.8
extra-source-files: README.rst, test/HKTests.hs

Library
  Exposed-Modules:  Language.HK, Language.HK.Prelude
  Hs-source-dirs:   src
  Build-Depends:    base >= 2, 
                    logict == 0.5.*
  GHC-Options:      -O2 -Wall
